Everything but the on click working

--- a/index.html
+++ b/index.html
@@ -5,17 +5,9 @@
 <head>
   <meta charset="utf-8">
   <title>Favorite Things</title>
-  <style type="text/css">
-    button,
-    div,
-    form,
-    input {
-      margin: 10px;
-    }
-  </style>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 </head>
 
 <body>
@@ -33,9 +25,6 @@
 	    </form>
 
 	  	<div id="favorites-view"></div>
-
-  	
-
     	<script type="text/javascript" src="assets/js/favorite.js"></script>
 
 	</div>
